// Vitest Snapshot v1

exports[`null-constructor > compat > should use manual assignment instead of Object.assign 1`] = `"(h=>((h=Object.create(null),h.hello=\\"world\\",h)))()"`;

exports[`null-constructor > compat#toJSON > should use manual assignment instead of Object.assign 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[\\"hello\\"],\\"v\\":[{\\"t\\":1,\\"s\\":\\"world\\"}],\\"s\\":1}},\\"r\\":0,\\"f\\":16255,\\"m\\":[]}"`;

exports[`null-constructor > compat#toJSON > should use manual assignment instead of Object.assign 2`] = `"(h=>((h=Object.create(null),h.hello=\\"world\\",h)))()"`;

exports[`null-constructor > serialize > supports Object.create(null) 1`] = `"Object.assign(Object.create(null),{hello:\\"world\\"})"`;

exports[`null-constructor > serialize > supports Symbol.iterator 1`] = `"Object.assign(Object.create(null),{[Symbol.iterator]:()=>[1,2,3].values()})"`;

exports[`null-constructor > serialize > supports self-recursion 1`] = `"(h=>(h=Object.create(null),h.b=h.a=h,h))()"`;

exports[`null-constructor > serializeAsync > supports Object.create(null) 1`] = `"Promise.resolve(Object.assign(Object.create(null),{hello:\\"world\\"}))"`;

exports[`null-constructor > serializeAsync > supports Symbol.iterator 1`] = `"Promise.resolve(Object.assign(Object.create(null),{[Symbol.iterator]:()=>[1,2,3].values()}))"`;

exports[`null-constructor > serializeAsync > supports self-recursion 1`] = `"(h=>(h=Object.assign(Object.create(null),{a:Promise.resolve().then(()=>h),b:Promise.resolve().then(()=>h)})))()"`;

exports[`null-constructor > toJSON > supports Object.create(null) 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[\\"hello\\"],\\"v\\":[{\\"t\\":1,\\"s\\":\\"world\\"}],\\"s\\":1}},\\"r\\":0,\\"f\\":16383,\\"m\\":[]}"`;

exports[`null-constructor > toJSON > supports Symbol.iterator 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[0],\\"v\\":[{\\"t\\":9,\\"i\\":1,\\"l\\":3,\\"a\\":[{\\"t\\":0,\\"s\\":1},{\\"t\\":0,\\"s\\":2},{\\"t\\":0,\\"s\\":3}]}],\\"s\\":1}},\\"r\\":0,\\"f\\":16383,\\"m\\":[]}"`;

exports[`null-constructor > toJSON > supports self-recursion 1`] = `
{
  "f": 16383,
  "m": [
    0,
  ],
  "r": 0,
  "t": {
    "a": undefined,
    "b": undefined,
    "c": undefined,
    "d": {
      "k": [
        "a",
        "b",
      ],
      "s": 2,
      "v": [
        {
          "a": undefined,
          "b": undefined,
          "c": undefined,
          "d": undefined,
          "f": undefined,
          "i": 0,
          "l": undefined,
          "m": undefined,
          "s": undefined,
          "t": 4,
        },
        {
          "a": undefined,
          "b": undefined,
          "c": undefined,
          "d": undefined,
          "f": undefined,
          "i": 0,
          "l": undefined,
          "m": undefined,
          "s": undefined,
          "t": 4,
        },
      ],
    },
    "f": undefined,
    "i": 0,
    "l": undefined,
    "m": undefined,
    "s": undefined,
    "t": 11,
  },
}
`;

exports[`null-constructor > toJSONAsync > supports Object.create(null) 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[\\"hello\\"],\\"v\\":[{\\"t\\":1,\\"s\\":\\"world\\"}],\\"s\\":1}},\\"r\\":0,\\"f\\":16383,\\"m\\":[]}"`;

exports[`null-constructor > toJSONAsync > supports Symbol.iterator 1`] = `"{\\"t\\":{\\"t\\":12,\\"i\\":0,\\"f\\":{\\"t\\":11,\\"i\\":1,\\"d\\":{\\"k\\":[0],\\"v\\":[{\\"t\\":9,\\"i\\":2,\\"l\\":3,\\"a\\":[{\\"t\\":0,\\"s\\":1},{\\"t\\":0,\\"s\\":2},{\\"t\\":0,\\"s\\":3}]}],\\"s\\":1}}},\\"r\\":0,\\"f\\":16383,\\"m\\":[]}"`;

exports[`null-constructor > toJSONAsync > supports self-recursion 1`] = `
{
  "f": 16383,
  "m": [
    0,
  ],
  "r": 0,
  "t": {
    "a": undefined,
    "b": undefined,
    "c": undefined,
    "d": {
      "k": [
        "a",
        "b",
      ],
      "s": 2,
      "v": [
        {
          "a": undefined,
          "b": undefined,
          "c": undefined,
          "d": undefined,
          "f": {
            "a": undefined,
            "b": undefined,
            "c": undefined,
            "d": undefined,
            "f": undefined,
            "i": 0,
            "l": undefined,
            "m": undefined,
            "s": undefined,
            "t": 4,
          },
          "i": 1,
          "l": undefined,
          "m": undefined,
          "s": undefined,
          "t": 12,
        },
        {
          "a": undefined,
          "b": undefined,
          "c": undefined,
          "d": undefined,
          "f": {
            "a": undefined,
            "b": undefined,
            "c": undefined,
            "d": undefined,
            "f": undefined,
            "i": 0,
            "l": undefined,
            "m": undefined,
            "s": undefined,
            "t": 4,
          },
          "i": 2,
          "l": undefined,
          "m": undefined,
          "s": undefined,
          "t": 12,
        },
      ],
    },
    "f": undefined,
    "i": 0,
    "l": undefined,
    "m": undefined,
    "s": undefined,
    "t": 11,
  },
}
`;
